feat: publish webui

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://HariKrishnan2k18.github.io/web-ui",
+  "homepage": "https://harikrishnan2k18.github.io/web-ui",
   "name": "react_app",
   "version": "0.1.0",
   "private": true,
